@@ -7,6 +7,7 @@ SBuild 0.3.1.9000
 * Changed behavior of --version command line option. It now exists the 
   application as expected.
 * Added new AntZipFileSet for conveniene when using AntZip.
+* Added new ScalaRepl addon providing access to the interactive Scala console.
 
 SBuild 0.3.1 - 2013-01-17
 
